--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -96,6 +96,7 @@
 	}
 
 	/* buttons / menulists */
+	#addons-page  #custombutons-add-new,
 	#addons-page #header button,
 	#addons-page #header #header-utils-btn,
 	#addons-page #list-view .global-info button,
@@ -113,6 +114,7 @@
 	  font-size: 90% !important;
 	}
 	
+	#addons-page  #custombutons-add-new,
 	#addons-page #header button:not(.button-link),
 	#addons-page #header #header-utils-btn,
 	#addons-page #list-view .global-info button:not(.button-link),
