--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -205,6 +205,10 @@
 	  -moz-image-region: rect(0px, 64px, 32px, 32px) !important;
 	  list-style-image: url(chrome://browser/skin/menuPanel.png) !important;
 	}
+	
+	#nav-bar #ctraddon_restart-button > .toolbarbutton-icon{
+	  list-style-image: url(chrome://classic_theme_restorer/content/images/ctrrestart@2x.png) !important;
+	}
 
 	#nav-bar #ctraddon_history-button > .toolbarbutton-icon{
 	  -moz-image-region: rect(0px, 32px, 32px, 0px) !important;
