--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -452,7 +452,7 @@
 	}
 	
 	/* fix ui tour popup position for ctrs panel ui button */
-	#UITourTooltip {
+	#main-window:not([fx44plus="true"]) #UITourTooltip {
 	  -moz-margin-end:0px !important;
 	}
 	
