--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -120,7 +120,8 @@
 		}
 		#nav-bar .toolbarbutton-1:not([disabled])[checked],
 		#nav-bar .toolbarbutton-1:not([disabled])[open],
-		#nav-bar .toolbarbutton-1:not([disabled]):active {
+		#nav-bar .toolbarbutton-1:not([disabled]):active
+		#nav-bar .toolbarbutton-1:not([disabled]):hover:active {
 		  box-shadow:	inset 0 1px #808080,
 						inset 0 -1px white,
 						inset 1px 0 #808080,
