--- a/xpi/content/css/winaero/overlayextra.css
+++ b/xpi/content/css/winaero/overlayextra.css
@@ -98,7 +98,7 @@
 		}
 		
 		#main-window[defaultfxtheme="true"][fx40plus="true"] #ctraddon_restart-button {
-		  list-style-image: url("chrome://classic_theme_restorer/content/images/ctrrestart2x.png");
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/ctrrestart@2x.png");
 		}
 
 		#main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar :-moz-any(#ctraddon_history-button,/*#ctraddon_history-menu-toolbar-button,*/#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button,#ctraddon_preferences-button,#ctraddon_restart-button) .toolbarbutton-icon {
