--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -124,12 +124,6 @@
 	  margin-bottom: 1px !important;
 	}
 
-	/*.tab-background-start[visuallyselected=true]::after,
-	.tab-background-start[visuallyselected=true]::before,
-	.tab-background-start,
-	.tab-background-end,
-	.tab-background-end[visuallyselected=true]::after,
-	.tab-background-end[visuallyselected=true]::before,*/
 	#tabbrowser-tabs,
 	#TabsToolbar {
 	  min-height: 0px !important;
@@ -178,33 +172,40 @@
 	  border-style: solid !important;
 	}
 
-	.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected=true] > .tab-stack > .tab-content,
+	#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true] > .tab-stack > .tab-content {
       border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 3 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
 	
-	.tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
       border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 3 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
 	
-	.tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):-moz-lwtheme > .tab-stack > .tab-content,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):-moz-lwtheme > .tab-stack > .tab-content {
       border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 3 3 0 fill repeat stretch !important;
       border-style: solid !important;
     }
 
-	.tabbrowser-tab[selected="true"] {
-		background-size: calc(100% - 2px) calc(100% - 1px) !important;
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected="true"],
+	#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true] {
+	  background-size: calc(100% - 2px) calc(100% - 1px) !important;
 	}
 	
 	@media not all and (-moz-windows-theme:aero) {
 		.tabs-newtab-button,
-		.tabbrowser-tab:not([selected=true]),
-		.tabbrowser-tab:not([selected=true])[pinned]{
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]),
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true])[pinned],
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]),
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true])[pinned]{
 		  background-size: calc(100% - 1px) calc(100% - 3px) !important;
 		}
 
-		.tabbrowser-tab[selected=true] > .tab-stack > .tab-content {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected=true] > .tab-stack > .tab-content,
+		#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true] > .tab-stack > .tab-content {
 		  border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 3 3 0 fill repeat stretch !important;
 		}
 	}
@@ -226,27 +227,32 @@
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.5) 50%) !important;
 	}
 
-	.tabbrowser-tab:not([selected=true]):hover:-moz-lwtheme-brighttext,
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):hover:-moz-lwtheme-brighttext,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):hover:-moz-lwtheme-brighttext,
 	.tabs-newtab-button:-moz-lwtheme-brighttext:hover {
 	  background-image: linear-gradient(hsla(0,0%,60%,.6), hsla(0,0%,45%,.6) 80%) !important;
 	}
-	.tabbrowser-tab:not([selected=true]):hover:-moz-lwtheme-darktext,
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):hover:-moz-lwtheme-darktext,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):hover:-moz-lwtheme-darktext,
 	.tabs-newtab-button:-moz-lwtheme-darktext:hover	{
 	  background-image: linear-gradient(hsla(0,0%,80%,.5), hsla(0,0%,60%,.5) 80%) !important;
 	}
-	.tabbrowser-tab:not([selected=true]):-moz-lwtheme-brighttext,
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):-moz-lwtheme-brighttext,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):-moz-lwtheme-brighttext,
 	.tabs-newtab-button:-moz-lwtheme-brighttext {
       background-image: linear-gradient(hsla(0,0%,40%,.6), hsla(0,0%,30%,.6) 80%) !important;
 	}
-	.tabbrowser-tab:not([selected=true]):-moz-lwtheme-darktext,
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected=true]):-moz-lwtheme-darktext,
+	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):-moz-lwtheme-darktext,
 	.tabs-newtab-button:-moz-lwtheme-darktext {
       background-image: linear-gradient(hsla(0,0%,60%,.5), hsla(0,0%,45%,.5) 80%) !important;
 	}
-
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]),
+	#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]) {
 	  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover,
+	#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):hover {
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
@@ -287,7 +293,8 @@
 		#TabsToolbar[tabsontop="false"] .tabbrowser-tab[pinned] {
 		  background-size: calc(100% - 0px) calc(100% - 4px) !important;
 		}
-		#TabsToolbar[tabsontop="false"] .tabbrowser-tab:not([selected=true])[pinned]  > .tab-stack > .tab-content {
+		#main-window:not([fx40plus="true"]) #TabsToolbar[tabsontop="false"] .tabbrowser-tab:not([selected=true])[pinned]  > .tab-stack > .tab-content,
+		#main-window[fx40plus="true"] #TabsToolbar[tabsontop="false"] .tabbrowser-tab:not([visuallyselected=true])[pinned]  > .tab-stack > .tab-content {
 		  border-image: url("chrome://classic_theme_restorer/content/images/taba.png") 3 3 0 fill repeat stretch !important;
 		  border-style: solid !important;
 		}
