--- a/xpi/content/css/winaero/classictabsextra.css
+++ b/xpi/content/css/winaero/classictabsextra.css
@@ -98,19 +98,23 @@
 	}
 	/**/
 
-	.tabbrowser-tab[selected=true]:-moz-lwtheme {
+	#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected=true]:-moz-lwtheme,
+	#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
 	}
 
 	/* for Windows Aero Theme (AeroBasic/AeroGlass - Vista/7) */
 	@media all and (-moz-windows-theme:aero) {
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected="true"]:not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top,#eaf2fb,#eef5fc,#fbfdff);
 		}
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec);
 		}
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa);
 		}
 	
@@ -121,19 +125,24 @@
 		  background-image: linear-gradient(to top, #868d94 0px, transparent 1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
 		}
 		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme) {
 		  background-size: 100% 100% !important;
 		}
 		
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]),
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]) {
 		  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover {
+		
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover,
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):hover {
 		  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 							radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
 
-		.tabbrowser-tab[selected=true][pinned]:not(:-moz-lwtheme) > .tab-stack > .tab-content {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected=true][pinned]:not(:-moz-lwtheme) > .tab-stack > .tab-content,
+		#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true][pinned]:not(:-moz-lwtheme) > .tab-stack > .tab-content {
 		  border-image: url("chrome://classic_theme_restorer/content/images/tab.png") 3 3 0 fill repeat stretch !important;
 		  border-style: solid !important;
 		}
@@ -142,17 +151,20 @@
 	/* for Windows Classic Theme on WinVista/7 */
 	@media not all and (-moz-windows-theme:aero) {
    	
-		.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected="true"]:not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true]:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
 							linear-gradient(-moz-dialog, -moz-dialog);
 		}
 
-		.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog);
 		}
 
-		.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):hover:not(:-moz-lwtheme) {
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog);
 		}
@@ -167,14 +179,18 @@
 							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		}
 
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme),
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme){
 		  background-size: 100% 100% !important;
 		}
 
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]),
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]) {
 		  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
-		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover {
+		
+		#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover,
+		#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):hover {
 		  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 							radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
