--- a/xpi/content/css/win8/classictabsextra.css
+++ b/xpi/content/css/win8/classictabsextra.css
@@ -92,23 +92,19 @@
 	}
 	/**/
 
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected=true]:-moz-lwtheme,
-	#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true]:-moz-lwtheme {
+	.tabbrowser-tab[selected=true]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
 	}
 	
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab[selected="true"]:not(:-moz-lwtheme),
-	#main-window[fx40plus="true"] .tabbrowser-tab[visuallyselected=true]:not(:-moz-lwtheme) {
+	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
 						linear-gradient(-moz-dialog, -moz-dialog);
 	}
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme),
-	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme) {
+	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
 						linear-gradient(-moz-dialog, -moz-dialog);
 	}
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme),
-	#main-window[fx40plus="true"] .tabbrowser-tab:not([visuallyselected=true]):hover:not(:-moz-lwtheme) {
+	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
 	  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
 						linear-gradient(-moz-dialog, -moz-dialog);
 	}
@@ -123,17 +119,14 @@
 						linear-gradient(-moz-dialog, -moz-dialog) !important;
 	}
 		
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme)
-	#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):not(:hover):not(:-moz-lwtheme) {
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 	  background-size: 100% 100% !important;
 	}
 	
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) ,
-	#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]) {
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
 	  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
-	#main-window:not([fx40plus="true"]) .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover
-	#main-window[fx40plus="true"] .tabbrowser-tab[pinned][titlechanged]:not([visuallyselected=true]):hover {
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover {
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
