--- a/xpi/content/css/invicons_bookmarksbar.css
+++ b/xpi/content/css/invicons_bookmarksbar.css
@@ -66,6 +66,10 @@
 	#main-window[fx45plus="true"] #PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 	  list-style-image: url(chrome://loop/skin/toolbar-inverted.png) !important;
 	}
+	
+	#main-window[fx46plus="true"] #PersonalToolbar #pocket-button:not([open]) {
+	  -moz-image-region: rect(0, 774px, 18px, 756px) !important;
+	}
   }
   
   @media  (-moz-os-version: windows-xp),
@@ -134,7 +138,10 @@
 		}
 		#main-window[fx45plus="true"] #PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
 		#main-window[fx45plus="true"] #PersonalToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
-		  list-style-image: url(chrome://loop/skin/toolbar-inverted/toolbar-inverted@2x.png) !important;
+		  list-style-image: url(chrome://loop/skin/toolbar-inverted@2x.png) !important;
+		}
+		#main-window[fx46plus="true"] #PersonalToolbar #pocket-button:not([open]) {
+		  -moz-image-region: rect(0, 1548px, 36px, 1520px) !important;
 		}
 		
 		#main-window[fx40plus="true"] #PersonalToolbar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
