--- a/xpi/content/css/invicons_navbar.css
+++ b/xpi/content/css/invicons_navbar.css
@@ -66,6 +66,9 @@
 	#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 	  list-style-image: url(chrome://loop/skin/toolbar-inverted.png) !important;
 	}
+	#main-window[fx46plus="true"] #nav-bar #pocket-button:not([open]) {
+	  -moz-image-region: rect(0, 774px, 18px, 756px) !important;
+	}
 
   }
    
@@ -139,13 +142,17 @@
 
 		#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
 		#main-window[fx45plus="true"] #nav-bar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
-		  list-style-image: url(chrome://loop/skin/toolbar-inverted/toolbar-inverted@2x.png) !important;
+		  list-style-image: url(chrome://loop/skin/toolbar-inverted@2x.png) !important;
+		}
+		
+		#main-window[fx46plus="true"] #nav-bar #pocket-button:not([open]) {
+		  -moz-image-region: rect(0, 1548px, 36px, 1520px) !important;
 		}
 		
 		#main-window[fx40plus="true"] #nav-bar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
 		  width: 40px !important;
 		}
-		/*#main-window[fx40plus="true"] #nav-bar #downloads-button .toolbarbutton-icon,*/
+
 		#main-window[fx40plus="true"] #nav-bar #ctraddon_bookmarks-button .toolbarbutton-icon {
 		  width: 32px !important;
 		}
