--- a/xpi/content/css/invicons_tabsbar.css
+++ b/xpi/content/css/invicons_tabsbar.css
@@ -62,6 +62,10 @@
 	#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
 	  list-style-image: url(chrome://loop/skin/toolbar-inverted.png) !important;
 	}
+	
+	#main-window[fx46plus="true"] #TabsToolbar #pocket-button:not([open]) {
+	  -moz-image-region: rect(0, 774px, 18px, 756px) !important;
+	}
 
 	/*tabs close button on tabs toolbar*/
 	#main-window #navigator-toolbox #TabsToolbar > .tabs-closebutton {
@@ -142,7 +146,10 @@
 		}
 		#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-container,
 		#main-window[fx45plus="true"] #TabsToolbar toolbarbutton[id^="loop-"]:not([cui-areatype="menu-panel"]):not([state="error"]):not([state="action"]):not([state="active"]) > .toolbarbutton-badge-stack {
-		  list-style-image: url(chrome://loop/skin/toolbar-inverted/toolbar-inverted@2x.png) !important;
+		  list-style-image: url(chrome://loop/skin/toolbar-inverted@2x.png) !important;
+		}
+		#main-window[fx46plus="true"] #TabsToolbar #pocket-button:not([open]) {
+		  -moz-image-region: rect(0, 1548px, 36px, 1520px) !important;
 		}
 		
 		#main-window[fx40plus="true"] #TabsToolbar #ctraddon_bookmarks-menu-toolbar-button .toolbarbutton-icon {
@@ -152,5 +159,17 @@
 		  width: 18px !important;
 		}
 	  }
+	  
+  
+	  #main-window[fx45plus="true"] #navigator-toolbox #TabsToolbar #new-tab-button:not(:-moz-lwtheme),
+	  #main-window[fx45plus="true"] #navigator-toolbox #TabsToolbar #new-tab-button,
+	  #main-window[fx45plus="true"] #navigator-toolbox #TabsToolbar > toolbarpaletteitem > #new-tab-button {
+		list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.svg) !important;
+	  }
+	  #main-window[fx45plus="true"] #TabsToolbar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-up,
+	  #main-window[fx45plus="true"] #TabsToolbar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
+		list-style-image: url("chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.svg") !important;
+	  }
   }
+
 }
