--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -613,8 +613,9 @@ radio.ctraddontab .radio-check-box1 {
   min-height:16px !important;
 }
 
-#ctraddon_pw_ibinfoico label {
-  background:url('chrome://classic_theme_restorer/content/images/globe.png') no-repeat left !important;
+#ctraddon_pw_ibinfoico label,
+#ctraddon_pw_ibinfoico2 label {
+  background:url('chrome://classic_theme_restorer/content/images/iicon.png') no-repeat left !important;
   padding-left:20px !important;
   min-height:16px !important;
 }
