--- a/xpi/content/css/alt_optionswindow2.css
+++ b/xpi/content/css/alt_optionswindow2.css
@@ -392,6 +392,12 @@
 	  margin-bottom: 0 !important;
 	}
 	
+	#offlineAppsList > * {
+	  min-width: unset !important;
+	  width: auto !important;
+	  max-width: 550px !important;
+	}
+	
 	/* advanced category tabs */
 	#advancedPrefs #tabsElement tab:not([selected]):not(:hover),
 	#advancedPrefs #tabsElement {
