--- a/xpi/content/css/bmbut_unsortedbookm2.css
+++ b/xpi/content/css/bmbut_unsortedbookm2.css
@@ -4,6 +4,11 @@
 
 	#ctraddon_BMB_unsortedBookmarks_m,
 	#ctraddon_BMB_unsortedBookmarks_mm {
+	  display: unset !important;
+	}
+
+	#ctraddon_BMB_unsortedBookmarks_m,
+	#ctraddon_BMB_unsortedBookmarks_mm {
 	  visibility: visible !important;
 	}
 
