--- a/xpi/content/css/hide_recently_bm.css
+++ b/xpi/content/css/hide_recently_bm.css
@@ -16,5 +16,6 @@
 	#BMB_recentBookmarks + menuitem + menuitem + menuitem + menuitem,
 	#BMB_recentBookmarks + menuitem + menuitem + menuitem + menuitem + menuitem{
 		visibility: collapse !important;
+		display:none !important;
 	}
 }
