--- a/xpi/content/css/bmbut_unsortedbookm.css
+++ b/xpi/content/css/bmbut_unsortedbookm.css
@@ -4,6 +4,11 @@
 
 	#ctraddon_BMB_unsortedBookmarks_m2,
 	#ctraddon_BMB_unsortedBookmarks_mm2 {
+	  display: unset !important;
+	}
+
+	#ctraddon_BMB_unsortedBookmarks_m2,
+	#ctraddon_BMB_unsortedBookmarks_mm2 {
 	  visibility: visible !important;
 	}
 
