--- a/xpi/content/css/alt_optionswindow2.css
+++ b/xpi/content/css/alt_optionswindow2.css
@@ -327,6 +327,25 @@
 		
 	}
 	
+	@media all and (-moz-windows-theme:aero) {
+		
+	  @media (-moz-os-version: windows-win7) {
+		
+		checkbox .checkbox-check,
+		radio .radio-check,
+		checkbox image,
+		radio image {
+		  width: 10px !important;
+		}
+		
+		checkbox label,
+		radio label {
+		  -moz-margin-start: -4px !important;
+		}
+	  }
+		
+	}
+	
 	/* content */
 	#categories .box-inherit {
 	  -moz-box-orient: horizontal !important;
@@ -617,4 +636,35 @@
 	#FontsDialog checkbox label {
 	  -moz-margin-start: -4px !important;
 	}
+}
+
+@media all and (-moz-windows-theme:aero) {
+	
+  @media (-moz-os-version: windows-win7) {
+	
+	*[subdialog="true"] checkbox .checkbox-check,
+	*[subdialog="true"] radio .radio-check,
+	*[subdialog="true"] checkbox image,
+	*[subdialog="true"] radio image {
+	  width: 10px !important;
+	}
+	
+	*[subdialog="true"] checkbox label,
+	*[subdialog="true"] radio label {
+	  -moz-margin-start: -4px !important;
+	}
+
+	#FontsDialog checkbox image {
+	  min-width: 10px !important;
+	  min-height: 10px !important;
+	  width: 10px !important;
+	  height: 10px !important;
+	}
+	
+	#FontsDialog checkbox label {
+	  -moz-margin-start: -4px !important;
+	}
+
+  }
+	
 }
