--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -166,6 +166,10 @@
 	  font-size: 90% !important;
 	}
 	
+	.addon .content-container * {
+	  font-size: 100% !important;
+	}
+	
 	/* detail view */
 	#detail-view button:not(.button-link):not(.text-link),
 	#detail-view menulist{
