--- a/xpi/content/css/tabs_curvedall.css
+++ b/xpi/content/css/tabs_curvedall.css
@@ -1,4 +1,3 @@
-/*AGENT_SHEET*/
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
@@ -32,7 +31,7 @@
 	.tab-background-start[visuallyselected=true]:-moz-locale-dir(rtl):not(:-moz-lwtheme)::after,
 	.tab-background-middle[visuallyselected=true]:not(:-moz-lwtheme),
 	.tabbrowser-tab:not(:-moz-lwtheme):hover > .tab-stack > .tab-background:not([visuallyselected=true]),
-	.tabbrowser-tab:not(:-moz-lwtheme)[pinned][titlechanged]:not([visuallyselected="true"]) > .tab-stack > .tab-content,
+	/*.tabbrowser-tab:not(:-moz-lwtheme)[pinned][titlechanged]:not([visuallyselected="true"]) > .tab-stack > .tab-content,*/
 	#tabbrowser-tabs:not(:-moz-lwtheme)::before {
 	  background-image: none !important;
 	}
@@ -139,20 +138,31 @@
       background-image:
         url(chrome://classic_theme_restorer/content/images/atab.png),
         url(chrome://classic_theme_restorer/content/images/atab_act.png),
-        url(chrome://classic_theme_restorer/content/images/atab_hov.png);
+        url(chrome://classic_theme_restorer/content/images/atab_hov.png),
+		url(chrome://classic_theme_restorer/content/images/atab_at.png);
     }
     
-    .tabbrowser-tab[pinned][titlechanged]:not(:-moz-lwtheme) > .tab-stack > .tab-content {
-      -moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_at.png") 2 28 repeat stretch !important;
-	  background-size: 95% 100% !important;
+    .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+      /*-moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_at.png") 2 28 repeat stretch !important;
+	  /*background-size: 95% 100% !important;
 	  background-image: linear-gradient(to top, #868d94 0px, transparent -1px),linear-gradient(to top,#b4c0cc,#c8d4e1,#d1deec) !important;
-	  background-position: 0px 0px !important;
+	  background-position: 0px 0px !important;*/
     }
-    .tabbrowser-tab[pinned][titlechanged]:hover:not(:-moz-lwtheme) > .tab-stack > .tab-content:not([selected="true"]) {
-      -moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_hov.png") 2 28 repeat stretch !important;
-	  background-size: 95% 100% !important;
+    .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover:not(:-moz-lwtheme) > .tab-stack > .tab-content {
+      /*-moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_hov.png") 2 28 repeat stretch !important;
+	  /*background-size: 95% 100% !important;
 	  background-image: linear-gradient(to top, #868d94 0px, transparent -1px),linear-gradient(to top,#d0dce8,#dce7f3,#e5effa) !important;
-	  background-position: 0px 0px !important;
+	  background-position: 0px 0px !important;*/
+    }
+	
+    .tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+      -moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_at.png") 2 28 fill repeat stretch !important;
+      border-style:solid;
+    }
+	
+    .tabbrowser-tab[pinned][titlechanged]:hover:not([selected="true"]):not(:-moz-lwtheme) > .tab-stack > .tab-content {
+      -moz-border-image: url("chrome://classic_theme_restorer/content/images/atab_hov.png") 2 28 fill repeat stretch !important;
+      border-style:solid;
     }
 	
 	/* Tabs toolbar tab close button (Fx31+) */
