--- a/xpi/content/css/linux/classictabsextra2.css
+++ b/xpi/content/css/linux/classictabsextra2.css
@@ -41,10 +41,10 @@
 	  background-image: linear-gradient(transparent,transparent) !important;
 	}
 	
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
+	/*.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 	  background-size: 95% 100% !important;
 	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #afaba5,#c0bdb6,#c9c6c0) !important;
-	}
+	}*/
 	
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme {
 	  background-image: linear-gradient(rgba(255,255,255,.8) 1px, rgba(255,255,255,.5) 3px, rgba(255,255,255,.3) 32%) !important;
