--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -351,6 +351,21 @@
 	  -moz-padding-end: 0px !important;
 	}
 	
+	/* pinned tabs fix (Fx45+) */
+	#main-window[fx45plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
+	  -moz-padding-end: 0px !important;
+	  -moz-padding-start: 0px !important;
+	}
+	#main-window[fx45plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab[pinned] image{
+	  -moz-padding-start:0px !important;
+	  -moz-padding-end: 0px !important;
+	  -moz-margin-start:5px !important;
+	  -moz-margin-end: 0px !important;
+	}
+	#main-window[fx45plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab[pinned] label{
+	  display:none!important;
+	}
+
 	/* TU workaround */
 	#PinnedTabsBarItems {
 	  margin-left:0px !important;
