--- a/xpi/content/css/tabs_squared2c2.css
+++ b/xpi/content/css/tabs_squared2c2.css
@@ -232,7 +232,10 @@
 	#main-window[fx38plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
 	  -moz-padding-end: 0px !important;
 	}
-
+	/* pinned tabs fix (Fx45+) */
+	#main-window[fx45plus="true"] #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-content[pinned] {
+	  -moz-padding-start: 6px !important;
+	}
 	/**/
 	#TabsToolbar #ctraddon_appbutton{
 	  margin-bottom:-1px !important;
