--- a/xpi/content/overlay_prefs.css
+++ b/xpi/content/overlay_prefs.css
@@ -229,7 +229,7 @@ radio.ctraddontab .radio-check-box1 {
 
 /* -mox-padding-start is useless in this case, because Firefox does not allow something like 
    #itemid:-moz-locale-dir(rtl) for background-position on preference windows anyway.
-   At least 'padding-left' does not create an empty space in front of ootion labels on rtl locales
+   At least 'padding-left' does not create an empty space in front of option labels on rtl locales
 */
 
 #ctraddon_pw_tab_noemptypticon label {
