--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -166,7 +166,7 @@
 	  font-size: 90% !important;
 	}
 	
-	.addon .content-container * {
+	.addon .description-outer-container * {
 	  font-size: 100% !important;
 	}
 	
