--- a/xpi/content/css/tabs_squared-osx.css
+++ b/xpi/content/css/tabs_squared-osx.css
@@ -32,11 +32,6 @@
 	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top,#b3b3b3,#cfcfcf,#dedede,#e5e5e5) !important;
 	}
 
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-	  background-size: 95% 100% !important;
-	  background-image: linear-gradient(to top, #676f76 0px, transparent 1px),linear-gradient(to top, #a1a1a1,#c0c0c0,#cccccc,#d4d4d4) !important;
-	}
-
 	.tabbrowser-tabs{
 	  border-bottom:0 !important;
 	}
@@ -45,12 +40,6 @@
 	  -moz-margin-end: -8px !important;
 	}
 
-	/*.tab-background-start[visuallyselected=true]::after,
-	.tab-background-start[visuallyselected=true]::before,
-	.tab-background-start,
-	.tab-background-end,
-	.tab-background-end[visuallyselected=true]::after,
-	.tab-background-end[visuallyselected=true]::before,*/
 	#tabbrowser-tabs{
 	  min-height: 0px !important;
 	}
@@ -114,7 +103,7 @@
 	.tab-background-start[visuallyselected=true]:-moz-lwtheme::before,
 	.tab-background-end[visuallyselected=true]:-moz-lwtheme::before,
 	.tabbrowser-tab:hover > .tab-stack > .tab-background:not([visuallyselected=true]),
-	.tabbrowser-tab[pinned][titlechanged]:not([visuallyselected="true"]) > .tab-stack > .tab-content,
+	/*.tabbrowser-tab[pinned][titlechanged]:not([visuallyselected="true"]) > .tab-stack > .tab-content,*/
 	#tabbrowser-tabs::before {
 	  background-image: none !important;
 	}
@@ -272,6 +261,13 @@
 	  background-image: linear-gradient(hsla(0,0%,80%,.5), hsla(0,0%,60%,.5) 80%) !important;
 	}
 
+	/* titlechanged pinned tabs */
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"])  .tab-content{
+	  background: unset !important;
+	}
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]){
+	  background-size: 100% 100% !important;
+	}
 	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
 	  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
