--- a/xpi/content/css/tabs_squaredc2.css
+++ b/xpi/content/css/tabs_squaredc2.css
@@ -110,14 +110,15 @@
 	.tabbrowser-tab:not([selected]):hover:-moz-lwtheme-brighttext .tab-content {
 	  background-image: linear-gradient(hsla(0,0%,60%,.6), hsla(0,0%,45%,.6) 80%) !important;
 	}
+
 	/* titlechanged pinned tabs */
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) .tab-content{
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"])  .tab-content {
 	  background-size: 100% 100% !important;
-	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
-						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,.75) 3%, rgba(186,221,251,.55) 40%, rgba(127,179,255,.25) 80%, rgba(127,179,255,.15)) !important;
 	}
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover .tab-content{
-	  background-size: 100% 100% !important;
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"])  .tab-content {
+	  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
+	}
+	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):hover  .tab-content {
 	  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 						radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 	}
@@ -169,12 +170,6 @@
 	}
 
 	/* Tabs Toolbar */
-	/*.tab-background-start[visuallyselected=true]::after,
-	.tab-background-start[visuallyselected=true]::before,
-	.tab-background-start,
-	.tab-background-end,
-	.tab-background-end[visuallyselected=true]::after,
-	.tab-background-end[visuallyselected=true]::before,*/
 	#tabbrowser-tabs{
 	  min-height: 0px !important;
 	}
